# bookstudio

./: .gitignore  README.md  build_exe.ps1  pyproject.toml
book_analyzer/: __init__.py  audio_scan.py  gui.py  library.py  main.py  reporter.py  schema.py
book_analyzer/parsers/: __init__.py  base.py  docx_parser.py  epub_parser.py  pdf_parser.py  txt_parser.py
docs/superpowers/: AGENT_HANDOFF.md  START_HERE.md
studio_app/: __init__.py  audio_scanner.py  background.py  calendar_poller.py  calendar_titles.py  db.py  db_lock.py  exports.py  ics_client.py  ingest.py  log_setup.py  main.py  marks_restore.py  pagination.py  parser_adapter.py  reaper.py  recovery.py  schedule_dates.py  schedule_resolve.py  settings.py  slug.py  snapshot.py  source_fetch.py  viewer_routes.py
studio_app/migrations/: 001_initial.sql
studio_app/routes/: books.py  exports.py  marks.py  narrators.py  publishers.py  (+4 more)
tests/: conftest.py  test_audio_scanner.py  test_background.py  test_book_assignment.py  test_calendar_poller.py  test_calendar_titles.py  test_db.py  test_exports.py  test_ics_client.py  test_ingest.py  test_marks_restore.py  test_pagination.py  test_parser_adapter.py  test_reaper.py  test_recovery.py  test_routes_audio.py  test_routes_books.py  test_routes_exports.py  test_routes_marks.py  test_routes_narrators.py  test_routes_publishers.py  test_routes_schedule.py  test_routes_sessions.py  test_routes_settings.py  test_routes_system.py  test_schedule_dates.py  test_schedule_resolve.py  test_settings.py  test_slug.py  test_snapshot.py  test_source_fetch.py  test_viewer_routes.py
(+42 files in other folders)
