[project]
name = "book-analyzer"
version = "0.1.0"
description = "Offline book parser tracking structural metadata for planning"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.2",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "pdfplumber>=0.11.4",
    "charset-normalizer>=3.4.0",
    "PySide6>=6.8.0",
    "requests>=2.32.0",
    "gdown>=5.2.0",
    "mutagen>=1.47.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
]

[project.scripts]
book-analyzer = "book_analyzer.main:cli"
book-analyzer-gui = "book_analyzer.gui:main"
studio-app = "studio_app.main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.11.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["book_analyzer", "studio_app"]
